# CONTA_COPRO

./: .env  .env.example  .gitignore  CHANGES_SUMMARY.md  COLOMBIAN_MIGRATION_SUMMARY.md  COLOMBIAN_STANDARDS.md  CONSOLIDATION_REPORT.md  ComprasEnhanced.tsx  ContextMenu.tsx  DEPRECATED_PURCHASES_VERSIONS.md  DashboardPageLayout.tsx  Dockerfile  DocumentModificationPanel.tsx  EnterpriseShell.tsx  EnterpriseWorkspace.tsx  EnterpriseWorkspace.tsx.bak  ForensicViewer.tsx  GuiaRemisionPanel.tsx  InvoiceItemsTable.tsx  JournalGrid.tsx  LedgerAnalytic.tsx  MIGRATION_COMPLETE_DIAN.md  MIGRATION_GUIDE_DIAN.md  MassiveUpload.tsx  PageLayout.tsx  PanelSection.tsx  PanelsGrid.tsx  PeriodCloseAction.tsx  PurchaseFormEnterprise.tsx  PurchaseFormEnterprise.tsx.bak  README.md  README_CONSOLIDATION.md  README_MASTER.md  SaleFormEnterprise.tsx  SidePanel.tsx  TenantSelector.tsx  alembic.ini  database.py  dispatcher.py  docker-compose.yml  (+30 more)
alembic/: env.py
config/: .env.prod.example  .env.staging.example
docs/: ARCHITECTURE.md  COVERAGE_MATRIX.md  LAYOUT_COMPONENTS.md  LEDGER_ENGINE_GUIDE.md  OPENAPI.md  PAYROLL_ACCOUNTING_ENGINE_CHANGELOG.md  RRHH_IA_LABORAL.md  SUNAT_ENTERPRISE.md
k8s/: config.yaml  deployment.yaml  hpa.yaml  observability.yaml
legal_library/: README.md
migrations/: env.py
scripts/: __init__.py  diag_module_chain.py  export_openapi.py  hr_local_server.py  seed_enterprise.sql  set_gemini_api_key.ps1  setup_local_postgres_and_migrate.ps1  smoke_full_matrix.py  smoke_phase_4_10.ps1  start_backend.ps1  test_gemini_operative.py  verify_gemini_simple.py
(+200 files in other folders)
