[project]
name = "conta-pro-enterprise-master"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "redis>=5.0.0",
  "celery>=5.3.0",
  "tenacity>=8.2.0",
  "httpx>=0.27.0",
  "opencv-python-headless>=4.10.0.84",
  "pillow>=10.4.0",
  "pytesseract>=0.3.13",
  "python-multipart>=0.0.9",
  "lxml>=5.1.0",
  "zeep>=4.3.1",
  "signxml>=4.0.3",
  "cryptography>=42.0.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-exporter-otlp>=1.24.0",
  "pgvector>=0.2.5",
  "openpyxl>=3.1.5",
  "reportlab>=4.2.2",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
